# Rust-Embassy-nRF52840__WS2812B-Control

./: .gitignore  Cargo.toml  Makefile.toml  memory.x
.cargo/: config.toml
docs/: howto-start.md  more-embassy-problems.md  problem-with-embassy-spi.md  problem-with-probe-rs-flashing.md
src/: main.rs
