[package]
name = "nrf-blink"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
smart-leds = "0.4"
ws2812-spi = "0.5"
nrf52840-hal = { version = "0.17", features = [] }
embedded-hal = "0.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# For math functions (optional, for breathing effect)
libm = "0.2"

[profile.release]
opt-level = "z"
lto = true
debug = 2
