[package]
name = "nrf-blink"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["tick-hz-32_768"] }
embassy-nrf = { version = "0.2", features = ["nrf52840", "time-driver-rtc1", "gpiote"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf52840-hal = { version = "0.17", features = [] }
embedded-hal = "0.2"
smart-leds = "0.4"
ws2812-spi = { git = "https://github.com/aziddy/ws2812-spi-rs", branch = "nrf52840_at4Mhz_support" }

# For math functions (optional, for breathing effect)
libm = "0.2"

[profile.release]
opt-level = "z"
lto = true
debug = 1  # Preserve debug info for defmt location resolution
